name:                advent2017
version:             0.1.0.0
synopsis:            Answers to Advent of Code 2017 written in Haskell
description:         Answers to Advent of Code 2017 written in Haskell
homepage:            https://github.com/githubuser/advent2017#readme
license:             MIT
license-file:        LICENSE
author:              Ciro Duran
maintainer:          ciro.duran@gmail.com
copyright:           2017 Ciro Duran
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Advent1, Advent2, Advent3, Advent4, Advent5, Advent6, Advent7,
                       Advent8, Advent9, Advent10, Advent11, Advent12, Advent13, Advent14
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , split
                     , heredoc
                     , text
                     , parsec
  default-language:    Haskell2010

executable advent2017
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , advent2017
                     , mtl
                     , containers
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
